[build-system]
requires = ["setuptools>=80.8.0", "setuptools_scm==8.3.1"]
build-backend = "setuptools.build_meta"


[project]
name = "pydaraja"
version = "0.3.7"
description = "Python wrapper for Mpesa's Daraja API"
authors = [
  {name = "Raymond Kipkorir", email = "raykipkorir02@gmail.com" }
]
maintainers = [
  {name = "Raymond Kipkorir", email = "raykipkorir02@gmail.com" }
]
readme = "README.md"
license-files = ["LICENSE"]
keywords = [
  "mpesa",
  "daraja"
]
requires-python = ">=3.7"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit~=3.7.0",
    "virtualenv~=20.23.1",
    "black~=23.3.0",
    "coverage~=7.6.0",
    "pytest~=8.3.1",
    "ruff~=0.11.12",
    "pyright==1.1.401"
]

[project.urls]
"Homepage" = "https://github.com/raykipkorir/pydaraja"
"Bug Tracker" = "https://github.com/raykipkorir/pydaraja/issues"

[tool.setuptools.packages.find]
include = ["pydaraja", "pydaraja.*"]
exclude = ["tests", "tests.*"]
